--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 
   },
   "scripts": {
-    "start": "npm run server | react-scripts start  --openssl-legacy-provider ",
+    "start": "npm run server | react-scripts start",
     "build": "react-scripts  build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
